FIX: Cambiar la variable pop3_uidl_format por %08Xu%08Xv

--- a/config/20-pop3.conf
+++ b/config/20-pop3.conf
@@ -47,7 +47,7 @@
 # Dovecot's default, so if you're building a new server it would be a good
 # idea to change this. %08Xu%08Xv should be pretty fail-safe.
 #
-#pop3_uidl_format = %08Xu%08Xv
+pop3_uidl_format = %08Xu%08Xv
 
 # Permanently save UIDLs sent to POP3 clients, so pop3_uidl_format changes
 # won't change those UIDLs. Currently this works only with Maildir.
